# Gitter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_BE.md
docs/: ARCHITECTURE.md  CHECKOUT_IMPLEMENTATION_PLAN.md  COMMIT_IMPLEMENTATION.md  COVERAGE.md  HASHER_ARCHITECTURE.md  HASHER_DESIGN.md  LOG_IMPLEMENTATION.md  REFACTORING_HEAD_MANAGEMENT.md  REFACTORING_SUMMARY.md  RESET_IMPLEMENTATION.md  SHA1_STRATEGY_PATTERN.md  STATUS_FIX.md  TREE_STORAGE.md
docs/HISTORY/: README.md
scripts/: generate_coverage_report.py
src/: main.cpp
src/cli/: CommandFactory.cpp  CommandFactory.hpp  CommandInvoker.cpp  CommandInvoker.hpp  ICommand.hpp
src/cli/commands/: AddCommand.cpp  AddCommand.hpp  CatFileCommand.cpp  CatFileCommand.hpp  CheckoutCommand.cpp  CheckoutCommand.hpp  CommitCommand.cpp  CommitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  InitCommand.cpp  InitCommand.hpp  LogCommand.cpp  LogCommand.hpp  ResetCommand.cpp  ResetCommand.hpp  RestoreCommand.cpp  RestoreCommand.hpp  StatusCommand.cpp  StatusCommand.hpp
src/core/: CommitObject.hpp  Constants.hpp  Index.cpp  Index.hpp  ObjectStore.cpp  ObjectStore.hpp  Repository.cpp  Repository.hpp  TreeBuilder.cpp  TreeBuilder.hpp
src/util/: Expected.hpp  FileMetadata.cpp  FileMetadata.hpp  Hasher.cpp  Hasher.hpp  HasherFactory.cpp  IHasher.hpp  Logger.cpp  Logger.hpp  PatternMatcher.cpp  PatternMatcher.hpp  Sha1Hasher.cpp  Sha1Hasher.hpp  Sha256Hasher.cpp  Sha256Hasher.hpp
test/: README.md  test_main.cpp  test_utils.cpp  test_utils.hpp
test/commands/: test_add.cpp  test_checkout.cpp  test_commit.cpp  test_init.cpp  test_log.cpp  test_reset.cpp  test_restore.cpp  test_status.cpp
test/core/: test_index.cpp  test_objectstore.cpp  test_repository.cpp  test_treebuilder.cpp
test/integration/: test_git_workflow.cpp
test/util/: test_hasher.cpp  test_patternmatcher.cpp
